css/style.css
body{
	margin: 0px;
	font-style: Sans-serif;
	background: #FFFFFF;
}

/*HEADER*/
.header{
	display: flex;
	justify-content: space-around;
	align-items: center;
	background: #1F2937;
	color: white;
	padding-top: 70px;
}
.logo{
	font-size: 36px;
	font-weight: bold;
}
.header a{
	text-decoration: none;
	color: white;
	padding: 15px;
}

/*MAIN*/
/*
.main{
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}
*/


/*CONTENT1*/
.content1{
	display: flex;
	justify-content: space-around;
	align-items: center;
	background: #1f2937;
	color: white;
	padding-top: 50px;
	padding-bottom: 50px;
}
.content1left{
	max-width: 445px;
	margin-left: 300px;
}
.awesometitle{
	text-align: center;
}
.awesometext{
	text-align: center;
}
.awesomebutton{
	padding: 5px 50px;
	margin-left: 150px;
	margin-bottom: 10px;
}

.content1right{
	padding: 100px;
	margin-left: 15px;
	margin-right: 300px;
	background: #6d747d; 
	text-align: center;
}


/*CONTENT2*/
.content2{
	background: #ffffff;
}
.content2 h1{
	text-align: center;
}
.subcontent2{
	display: flex;
	align-items: center;
	justify-content: center;
}
.info{
	max-width: 200px;
	padding: 10px;
	margin: 10px;
}

/*CONTENT3*/
.content3{
	display: flex;
	padding: 75px 75px;
	background: #E5E7EB;
	font-style: italic;
	justify-content: center;
}

.quotetext{
	text-align: center;
	max-width: 450px;
}
.quoteauthor{
	font-weight: bold;
	text-align: right;
	font-size: 20px;
}

/*CONTENT4*/
.content4{
	display: flex;
	align-items:center;
	justify-content: center;
	padding: 50px;
}
.content4box{
	display: flex;
	background: #ffffff;
	justify-content: center;
	align-items: center;
	background: #3b82f6;
	gap: 10px;
	border-radius: 15px;
}
.content4left{
	display: flex;
	flex-direction: column;
	color: white;
}
.signupheader{
	padding: 10px;
	margin: 0px 2px;
	font-size: 20px;
	font-weight: bold;
}
.signupsubtext{
	font-size: 15px;
	padding: 0px 15px;
	margin-top: 0px;
	margin-bottom: 10px;
}
.content4button{
	color: white;
	border-radius: 4px;
	border-width: 1px;
	border-color: white;
	padding: 3px 13px;
	margin-right: 15px;
	background: #3b82f6;
	font-weight: bold;
}

/*FOOTER*/
.footer{
	display: flex;
	align-items: end;
	justify-content: center;
	background: #1F2937;
	color: white;
	font-size: 15px;
	padding-top: 15px;
	padding-bottom: 10px;
}

